# venvipy

./: .gitignore  .travis.yaml  .travis.yml  FUNDING.yml  LICENSE  MANIFEST  MANIFEST.in  README.md  README.rst  _config.yml  creator.py  dialogs.py  get_data.py  info.py  manage_pip.py  managepip.py  organize.py  pyproject.toml  requirements.txt  settings.py  setup.py  venvi.py  venvipy.qrc  venvipy_rc.py  wizard.py
.github/: FUNDING.yml
requirements/: base.txt  deploy.txt  dev.txt
resources/: venvipy_rc.py
scripts/: installpkgs.sh
tests/: test.py  test.sh
venvipy/: __init__.py  active  bars.py  creator.py  dialogs.py  get_data.py  manage_pip.py  pkg_installer.py  pkg_manager.py  tables.py  testfile.py  venvi.py  venvi_cfg.py  venvipy_rc.py  wizard.py
venvipy/styles/: custom.py  theme.py
