[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "venvipy"
authors = [
    {name = "sinusphi", email = "sinusphi.sq@gmail.com"}
]
description = "A GUI for managing Python virtual environments."
readme = "README.rst"
requires-python = ">=3.6"
keywords = [
    "python",
    "python3",
    "venv",
    "virtualenvironment",
    "virtual-environment",
    "pyqt",
    "pyqt5",
    "pyqt5-desktop-application",
    "gui"
]
license = {text = "GPLv3+"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Other Audience",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: User Interfaces",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.3",
    "Programming Language :: Python :: 3.4",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython"
]
dependencies = [
    "PyQt5==5.15.4",
    "PyQt5-sip",
    "requests",
    "beautifulsoup4",
    'dataclasses ; python_version<"3.7"'
]
dynamic = ["0.3.6"]

[project.scripts]
venvipy = "venvipy=venvipy.venvi:main"
venvipy-wizard = "venvipy-wizard=venvipy.wizard:main"
