[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "venvipy"
dynamic = ["version"]

authors = [
    {name = "sinusphi", email = "sinusphi.sq@gmail.com"}
]
description = "A GUI for managing Python virtual environments."
readme = "README.rst"
requires-python = ">=3.7"
keywords = [
    "python",
    "python3",
    "venv",
    "virtualenvironment",
    "virtual-environment",
    "pyqt",
    "pyqt6",
    "pyqt6-desktop-application",
    "gui"
]
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Other Audience",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: User Interfaces",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.3",
    "Programming Language :: Python :: 3.4",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython"
]
dependencies = [
    "PyQt6==6.10.2",
    "requests",
    "beautifulsoup4",
]

[project.scripts]
venvipy = "venvipy.venvi:main"

[tool.setuptools]
packages = ["venvipy", "venvipy.platforms", "venvipy.styles"]
dynamic = {version = {attr = "venvipy.get_data.__version__"}}

[tool.setuptools.package-data]
venvipy = ["icons/*.png", "icons/*.ico"]
